force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Net_New_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Annual_Recurring_Revenue__c</fullName>
    <description>aka &quot;Net New Annual Recurring Revenue&quot;. For New products and Extensions, NNARR == Sales Price; for Renewal, NNARR == Quote ARR - Asset ARR; For decom, TBD; for Migration, TBD. Extended amount, not per-unit amount.</description>
    <label>NNARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>