force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <inlineHelpText>Non-recurring revenue</inlineHelpText>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>