force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Number_of_Open_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Shipments__c</fullName>
    <label>Number of Open Shipments</label>
    <summaryFilterItems>
        <field>Shipment_Forecast__c.Shipped__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Shipment_Forecast__c.Quote_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>