force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Number_of_Shipment_Forecasts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shipment_Forecasts__c</fullName>
    <label>Number of Shipment Forecasts</label>
    <summaryForeignKey>Shipment_Forecast__c.Quote_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>