force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Override_Count__c.field-meta.xml
<CustomField>
    <fullName>Override_Count__c</fullName>
    <description>The number of override records that apply to this Quote Product record. Makes it easier to know whether there are any other remaining overrides (when clearing overrides).</description>
    <label>Override Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>