force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Perpetual_Software_Amount__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Software_Amount__c</fullName>
    <inlineHelpText>For maintenance.</inlineHelpText>
    <label>Perpetual Software Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>