force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>copied from the Product</description>
    <formula>Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>