force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <length>128</length>
    <type>Text</type>
</CustomField>