force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Proposed_Price__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Price__c</fullName>
    <description>Calculated as Adjusted List Price + Uplift. Extended amount, not per-unit amount.</description>
    <label>Proposed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>