force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Do not modify! Always == 1. Maps to the Quantity field in the Opp Line Items so OLI.Total == Quantity * Sales Price (we set Sales Price as the total amount, not the Unit price).</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>