force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Quote_Product_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_18_Digit_ID__c</fullName>
    <description>18 digit ID for Quote Products</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Product 18 Digit ID</label>
    <type>Text</type>
</CustomField>