force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Product</label>
    <type>Text</type>
</CustomField>