force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Calculated as Proposed Price - Discretionary Discount (Discount Percent). Extended amount, not per-unit amount.</description>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>