force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Seasonal_License__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_License__c</fullName>
    <description>Used by Roadnet only. Drives seasonal pricing calculation.</description>
    <label>Seasonal License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>