force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Shipment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Schedule__c</fullName>
    <formula>IF( Number_of_Shipment_Forecasts__c &gt; 0, HYPERLINK(&apos;/apex/EditShipmentSchedule?Id=&apos; + Id, &apos;Edit&apos;), HYPERLINK(&apos;/apex/EditShipmentSchedule?Id=&apos; + Id, &apos;Add&apos;))</formula>
    <label>Shipment Schedule</label>
    <type>Text</type>
</CustomField>