force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Sum_of_Shipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Shipment_Quantity__c</fullName>
    <label>Sum of Shipment Quantity</label>
    <summarizedField>Shipment_Forecast__c.Shipment_Quantity__c</summarizedField>
    <summaryForeignKey>Shipment_Forecast__c.Quote_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>