force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Term_Amount__c.field-meta.xml
<CustomField>
    <fullName>Term_Amount__c</fullName>
    <description>Amount to charge for first/current invoice term. For co-term&apos;d products, may be less than 12 months, otherwise first 12 months price. Extended amount, not per-unit amount. For Websense, since they charge the full contract amount up front, this is the full contract term amount. (I.e. First Invoice Term == Full Contract Term)</description>
    <label>Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>