force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Total_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percent__c</fullName>
    <label>Total Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>