force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Unit_Discount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Discount__c</fullName>
    <inlineHelpText>Shown in Mexico quote output</inlineHelpText>
    <label>Per Unit Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>