force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Unit_Price_MX_Output__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_MX_Output__c</fullName>
    <inlineHelpText>Only used for Mexico output.</inlineHelpText>
    <label>Unit Price (MX Output)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>