force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price__c</fullName>
    <inlineHelpText>Per unit sales price.</inlineHelpText>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>