force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Amount__c</fullName>
    <inlineHelpText>Annual Total (not Unit) Uplift Amount for subscription. One-time total uplift amount for perpetual.</inlineHelpText>
    <label>Annual Total Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>