force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Uplift_Entered_As__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Entered_As__c</fullName>
    <inlineHelpText>Annual Total (not Unit) Uplift Amount for subscription. One-time total uplift amount for perpetual.</inlineHelpText>
    <label>Annual Total Uplift Entered As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>