force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Uplift_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percentage__c</fullName>
    <description>User entered Discretionary Uplift. In UI user can enter either a currency amount or a percentage. If a currency amount is entered, value is converted to a percentage before storing.</description>
    <inlineHelpText>Technically this is the &quot;Annual Total (not Unit) Uplift&quot;, but a percentage is the same whether it is monthly, annual, or one-time (i.e. for perpetual products)</inlineHelpText>
    <label>Annual Total Uplift Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>