force-app/main/default/objects/VCG_CPQ_Quote_Product__c/validationRules/Mexico_product_with_no_lease_term.validationRule-meta.xml
<ValidationRule>
    <fullName>Mexico_product_with_no_lease_term</fullName>
    <active>true</active>
    <description>Please choose a Lease Term before saving quote.</description>
    <errorConditionFormula>AND(
TEXT(Product__r.Business_Unit__c) = &quot;Omnitracs MX&quot;,
ISBLANK(TEXT(Lease_Term__c)),
NOT(ISPICKVAL(Quote__r.Opportunity__r.Order_Type__c, &quot;Eval&quot;)),
TEXT(Line_Type__c) = &quot;New&quot;
)</errorConditionFormula>
    <errorMessage>Please choose a Lease Term before saving quote.</errorMessage>
</ValidationRule>