force-app/main/default/objects/VCG_CPQ_Quote_Product__c/validationRules/Quote_Product_Lock_During_Quote_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Product_Lock_During_Quote_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>/* Part Number being a required field we cannot make the field Read Only in the Page Layout.So Adding this Condition for all Users except SysAdmin (They have Modify All Permission )  */

ISPICKVAL(Quote__r.Approval_Status__c,&apos;Pending Approval&apos;) &amp;&amp; Quote__r.Ready_For_Approval__c = TRUE &amp;&amp; NOT(ISNEW()) &amp;&amp;  ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>Editing Quote Products while the Quote record is being considered for approval is not allowed. Please contact your administrator if you have any questions about this error.</errorMessage>
</ValidationRule>